<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:slider="http://schemas.android.com/apk/lib/sneakycoders.visualreact.utils">
    <PreferenceCategory
        android:key="general_preferences"
        android:selectable="false"
        android:title="@string/gameplay_category">
        <SwitchPreference
            android:defaultValue="true"
            android:key="show_level_tips"
            android:persistent="true"
            android:summaryOff="@string/show_level_tips_off"
            android:summaryOn="@string/show_level_tips_on"
            android:title="@string/show_level_tips" />
        <sneakycoders.visualreact.preferences.SliderPreference
            android:defaultValue="6"
            android:dialogTitle="@string/levels_per_match"
            android:key="levels_per_match"
            android:persistent="true"
            android:summary="@string/levels_per_match_summary"
            android:title="@string/levels_per_match"
            slider:maxValue="20"
            slider:minValue="1" />
        <sneakycoders.visualreact.preferences.SliderPreference
            android:defaultValue="3"
            android:dialogTitle="@string/rounds_per_level"
            android:key="rounds_per_level"
            android:persistent="true"
            android:summary="@string/rounds_per_level_summary"
            android:title="@string/rounds_per_level"
            slider:maxValue="20"
            slider:minValue="1" />
    </PreferenceCategory>
    <PreferenceCategory
        android:key="levels_selected_category"
        android:selectable="false"
        android:title="@string/levels_selected_category">
        <!-- Stub for selected levels -->
    </PreferenceCategory>
</PreferenceScreen>
